[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-json-tip"
version = "0.1.0"
description = "A Streamlit custom component for viewing JSON with interactive tooltips and tags"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "streamlit>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]

[tool.uv]
dev-dependencies = [
    "streamlit>=1.0.0",
]