[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-json-tip"
version = "0.2.2"
description = "A Streamlit custom component for viewing JSON with interactive tooltips and tags"
authors = [
    {name = "Isaac", email = "isaac@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["streamlit", "json", "viewer", "tooltip", "component", "interactive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "streamlit>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/isaac/streamlit-json-tip"
Documentation = "https://github.com/isaac/streamlit-json-tip#readme"
Repository = "https://github.com/isaac/streamlit-json-tip"
"Bug Tracker" = "https://github.com/isaac/streamlit-json-tip/issues"

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]

[tool.uv]
dev-dependencies = [
    "streamlit>=1.0.0",
]

[tool.uv.scripts]
# Frontend build
build-frontend = "cd streamlit_json_tip/frontend && npm run build"

# Package building
clean = "rm -rf dist/ build/ streamlit_json_tip.egg-info/"
build = ["clean", "uv run python -m build"]
build-check = ["build", "uv run python -m twine check dist/*"]

# Publishing
publish-test = ["build-check", "uv run python -m twine upload --repository testpypi dist/*"]
publish = ["build-check", "uv run python -m twine upload dist/*"]

# Full workflow
release = ["build-frontend", "publish"]
release-test = ["build-frontend", "publish-test"]
